--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <button id="ar-button">افتح الصندوق</button>
   <div id="ar-container"></div>
-  <video id="ar-video" src="public/video.mp4" style="display:none; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; max-width:80vw; max-height:40vh; background:#000;" controls></video>
+  <video id="ar-video" src="video.mp4" style="display:none; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; max-width:80vw; max-height:40vh; background:#000;" controls></video>
   <iframe id="yt-video" style="display:none; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; max-width:80vw; max-height:40vh; background:#000;" allowfullscreen allow="autoplay"></iframe>
   <div style="position:absolute; bottom:20px; left:50%; transform:translateX(-50%); z-index:30;">
     <button id="use-local">تشغيل الفيديو من الجهاز</button>
