--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web AR صندوق تفاعلي</title>
+  <meta charset="UTF-8">
+  <title>Web AR تجربة</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- مكتبات -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.7/dist/mindar-image-three.prod.js"></script>
+
   <style>
     body { margin: 0; overflow: hidden; }
-    #ar-button { position: absolute; top: 20px; right: 20px; z-index: 10; padding: 10px 20px; font-size: 18px; }
+    #ar-container { width: 100vw; height: 100vh; position: relative; }
+    #video-box {
+      display: none;
+      position: absolute;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+      max-width: 80vw;
+      background: black;
+    }
   </style>
 </head>
 <body>
-  <button id="ar-button">افتح الصندوق</button>
   <div id="ar-container"></div>
-  <video id="ar-video" src="video.mp4" style="display:none; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; max-width:80vw; max-height:40vh; background:#000;" controls></video>
-  <iframe id="yt-video" style="display:none; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%); z-index:20; max-width:80vw; max-height:40vh; background:#000;" allowfullscreen allow="autoplay"></iframe>
-  <div style="position:absolute; bottom:20px; left:50%; transform:translateX(-50%); z-index:30;">
-    <button id="use-local">تشغيل الفيديو من الجهاز</button>
-    <button id="use-yt">تشغيل من يوتيوب</button>
-  </div>
-  <script type="module" src="/main.js"></script>
+  <video id="video-box" src="video.mp4" controls></video>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
