--- a/index.html
+++ b/index.html
@@ -2,32 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Web AR تجربة</title>
+  <title>AR صندوق</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- مكتبات -->
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.7/dist/mindar-image-three.prod.js"></script>
-
-  <style>
-    body { margin: 0; overflow: hidden; }
-    #ar-container { width: 100vw; height: 100vh; position: relative; }
-    #video-box {
-      display: none;
-      position: absolute;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
-      max-width: 80vw;
-      background: black;
-    }
-  </style>
+  <style>body { margin: 0; overflow: hidden; }</style>
 </head>
 <body>
   <div id="ar-container"></div>
-  <video id="video-box" src="video.mp4" controls></video>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
